adding reflexion to backend

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,5 @@ export OPENAI_API_VERSION=<--api version if required-->
 export OPENAI_API_TYPE=<--api type if required -->
 export OPENAI_API_MODEL=<--modelname-->
 export OPENAI_API_DEPLOYMENT=<--deploymentname-->
+
+export REPLICATE_API_TOKEN=<--api-token-->
